Align mobile menu correctly

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -177,6 +177,7 @@
 
   .Nav--GroupLinks {
     position: relative;
+    top: 0;
     text-align: center;
   }
 
